--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,5 @@ services:
     db:
         image: "microsoft/mssql-server-linux"
         environment:
-            SA_PASSWORD: "password"
+            SA_PASSWORD: "P@ssword1"
             ACCEPT_EULA: "Y"
