--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     },
     "Sql":{
       "Server": "localhost",
-      "UserName": "SA",
+      "UserName": "sa",
       "Password": "P@ssword1"
     },
     "AllowedHosts": "*"
