--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,5 @@ services:
         ports:
             - 1433:1433
         environment:
-            SA_PASSWORD: "P@ssword1" #defaults: username: 'SA' | server: 'localhost'
+            SA_PASSWORD: "P@ssword1" #defaults: username: 'sa' | server: 'localhost' (in Sql Studio), 'db' (in compose)
             ACCEPT_EULA: "Y"
