--- a/appsettings.json
+++ b/appsettings.json
@@ -4,6 +4,10 @@
         "Default": "Warning"
       }
     },
+    "Application": {
+      "DatabaseName": "InitializerDb",
+      "SchemaName": "InitializerSchema"
+    },
     "Sql":{
       "Server": "localhost",
       "UserName": "sa",
