Renamed to SqlFactory

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DatabaseName=InitializerDb
-SchemaName=InitializerSchema
+DatabaseName=FactoryDb
+SchemaName=FactorySchema
 
 Sql:Server=db
 Sql:UserName=sa
