--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,8 @@
       }
     },
     "Application": {
-      "DatabaseName": "InitializerDb",
-      "SchemaName": "InitializerSchema"
+      "DatabaseName": "FactoryDb",
+      "SchemaName": "FactorySchema"
     },
     "Sql":{
       "Server": "localhost",
