--- a/SqlFactory.csproj
+++ b/SqlFactory.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <RootNamespace>SqlInitializer</RootNamespace>
+    <RootNamespace>SqlFactory</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
